[gd_scene load_steps=15 format=2]

[ext_resource path="res://scripts/nave.gd" type="Script" id=1]
[ext_resource path="res://PNG/playerShip1_green.png" type="Texture" id=2]
[ext_resource path="res://PNG/Parts/gun08.png" type="Texture" id=3]
[ext_resource path="res://PNG/Parts/engine1.png" type="Texture" id=4]
[ext_resource path="res://PNG/Effects/shot_fireball.png" type="Texture" id=5]
[ext_resource path="res://scripts/escudo.gd" type="Script" id=6]
[ext_resource path="res://PNG/Effects/shield2.png" type="Texture" id=7]

[sub_resource type="Animation" id=1]
resource_name = "destroy"
length = 1.6
tracks/0/type = "value"
tracks/0/path = NodePath("Particles:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.9 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "menu"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "idlle"

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.284768, 0.483444, 0.89404 )
colors = PoolColorArray( 1, 1, 1, 1, 0.945098, 0.823529, 0.0627451, 1, 0.843137, 0.529412, 0, 1, 0.627451, 0, 0, 1 )

[sub_resource type="Animation" id=4]
resource_name = "default"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 2 ]
}

[sub_resource type="Animation" id=5]
resource_name = "default"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 2 ]
}

[sub_resource type="CircleShape2D" id=6]
radius = 80.61

[sub_resource type="Animation" id=7]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.0195772, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.9, 0.9 ) ]
}

[node name="nave" type="Area2D"]
position = Vector2( 300.073, 385.337 )
script = ExtResource( 1 )

[node name="coli_nave" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -6.72443, -39.1667, 8.87445, -39.1667, 13.0036, -13.4745, 32.2728, -1.54593, 33.6492, -13.4745, 33.1904, -23.1091, 41.4486, -23.1091, 42.3662, -13.0157, 42.3662, -0.169556, 50.6244, -6.59262, 53.3771, -5.67505, 51.0832, 25.9815, 46.4953, 20.476, 13.0036, 28.7343, 7.03931, 38.8276, -7.642, 37.4513, -15.9002, 28.2755, -43.8864, 23.6876, -48.0156, 25.5227, -52.1447, -6.13382, -44.804, -0.628357, -42.0513, -13.4745, -42.0513, -24.0267, -33.7931, -25.403, -34.2519, -12.5569, -36.087, -5.67505, -33.7931, -2.9223, -13.6063, -13.0157 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="canhaoE" type="Sprite" parent="."]
position = Vector2( -37.6212, -1.03265 )
texture = ExtResource( 3 )
flip_v = true

[node name="canhaoD" type="Sprite" parent="."]
position = Vector2( 38.3549, -0.435883 )
texture = ExtResource( 3 )
flip_v = true

[node name="PosE" type="Position2D" parent="."]
position = Vector2( -37.945, -49.28 )

[node name="PosD" type="Position2D" parent="."]
position = Vector2( 38.2906, -49.2798 )

[node name="PosC" type="Position2D" parent="."]
position = Vector2( 0, -70 )

[node name="Anima" type="AnimationPlayer" parent="."]
autoplay = "idlle"
anims/destroy = SubResource( 1 )
anims/idlle = SubResource( 2 )

[node name="Particles" type="CPUParticles2D" parent="."]
emitting = false
amount = 100
one_shot = true
explosiveness = 1.0
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 64.52
scale_amount = 7.0
scale_amount_random = 1.0
color_ramp = SubResource( 3 )

[node name="propulsor" type="Sprite" parent="."]
visible = false
position = Vector2( 21.3401, 35.1206 )
scale = Vector2( 0.5, 0.7 )
texture = ExtResource( 4 )
flip_v = true

[node name="propulsor2" type="Sprite" parent="."]
visible = false
position = Vector2( -20.326, 35.1624 )
scale = Vector2( 0.5, 0.7 )
texture = ExtResource( 4 )
flip_v = true

[node name="P_foguete" type="Position2D" parent="."]
editor/display_folded = true
visible = false
position = Vector2( 21.2023, 48.7243 )
z_index = -1

[node name="Sprite" type="Sprite" parent="P_foguete"]
texture = ExtResource( 5 )
flip_h = true
flip_v = true
hframes = 4

[node name="Anima" type="AnimationPlayer" parent="P_foguete"]
autoplay = "default"
anims/default = SubResource( 4 )

[node name="P_foguete2" type="Position2D" parent="."]
editor/display_folded = true
visible = false
position = Vector2( -20.7984, 48.9262 )
z_index = -1

[node name="Sprite" type="Sprite" parent="P_foguete2"]
texture = ExtResource( 5 )
flip_h = true
flip_v = true
hframes = 4

[node name="Anima" type="AnimationPlayer" parent="P_foguete2"]
autoplay = "default"
anims/default = SubResource( 5 )

[node name="escudo" type="Area2D" parent="."]
visible = false
script = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="escudo"]
scale = Vector2( 0.99909, 0.99909 )
texture = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="escudo"]
shape = SubResource( 6 )

[node name="Anima" type="AnimationPlayer" parent="escudo"]
autoplay = "default"
anims/default = SubResource( 7 )

[node name="Timer" type="Timer" parent="escudo"]
wait_time = 15.0
[connection signal="area_entered" from="." to="." method="_on_nave_area_entered"]
[connection signal="area_entered" from="escudo" to="escudo" method="_on_escudo_area_entered"]
[connection signal="timeout" from="escudo/Timer" to="escudo" method="_on_Timer_timeout"]
